[package]
name = "sysinfo-report"
version = "1.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/lizelive/sysinfo-report"
description = "gathers some basic system info and generates a serializable report."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"
bytes = { version = "1.5.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
local-ip-address = "0.5.5"
